<resources>
    <string name="app_name">Simulation de Hockey</string>

    <!-- Noms des équipes -->
    <string name="ducks">Ducks d\'Anaheim</string>
    <string name="coyotes">Coyotes de l\'Arizona</string>
    <string name="bruins">Bruins de Boston</string>
    <string name="sabres">Sabres de Buffalo</string>
    <string name="flames">Flames de Calgary</string>
    <string name="hurricanes">Hurricanes de la Caroline</string>
    <string name="blackhawks">Blackhawks de Chicago</string>
    <string name="avalanche">Avalanche du Colorado</string>
    <string name="blue_jackets">Blue Jackets de Colombus</string>
    <string name="stars">Stars de Dallas</string>
    <string name="red_wings">Red Wings de Détroit</string>
    <string name="oilers">Oilers d\'Edmonton</string>
    <string name="panthers">Panthers de la Floride</string>
    <string name="kings">Kings de Los Angeles</string>
    <string name="wild">Wild du Minnesota</string>
    <string name="canadiens">Canadiens de Montréal</string>
    <string name="predators">Predators de Nashville</string>
    <string name="devils">Devils du New Jersey</string>
    <string name="islanders">Islanders de New York</string>
    <string name="rangers">Rangers de New York</string>
    <string name="senators">Senators d\'Ottawa</string>
    <string name="flyers">Flyers de Philadelphie</string>
    <string name="penguins">Penguins de Pittsburgh</string>
    <string name="sharks">Sharks de San José</string>
    <string name="blues">Blues de St-Louis</string>
    <string name="lightning">Lightning de Tampa Bay</string>
    <string name="maple_leafs">Maple Leafs de Toronto</string>
    <string name="canucks">Canucks de Vancouver</string>
    <string name="capitals">Capitals de Washington</string>
    <string name="jets">Jets de Winnipeg</string>

    <string name="buttonA1">Commencer</string>
    <string name="TVChoixEquipe">Sélectionnez une équipe pour poursuivre.</string>
    <string name="selectTeam1">Une équipe est sélectionnée.</string>
    <string name="selectTeam2">Équipe déselectionnée.</string>
    <string name="ficheActuelle">Fiche actuelle : </string>
    <string name="btnMatch">Simuler le prochain match</string>
    <string name="btnSaison">Simuler le reste de la saison</string>
    <string name="pointsObtenus">Points obtenus : </string>
    <string name="TVVS">VS</string>
    <string name="exterieur">Extérieur</string>
    <string name="domicile">Domicile</string>
    <string name="simuler">Simuler</string>
    <string name="retour">Retour</string>
    <string name="confirmation">Êtes-vous sûr de vouloir revenir en arrière? Tous les progrès seront perdus.</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="saisonFinie">La saison est terminée!</string>
    <string name="victoire">Victoire!</string>
    <string name="défaite">Défaite en temps réglementaire</string>
    <string name="défaiteProl">Défaite en prolongation</string>

    <string name="alignementDépart">Alignement de départ</string>
    <string name="ailierGauche">Ailier gauche : </string>
    <string name="centre">Centre : </string>
    <string name="ailierDroit">Ailier droit : </string>
    <string name="défenseur">Défenseur : </string>
    <string name="gardien">Gardien : </string>

    <string name="sauvegarder">Sauvegarder</string>
    <string name="sauvegardeRéussie">Sauvegarde réussie!</string>
    <string name="effacerContenu">Effacer le fichier de sauvegarde</string>
    <string name="effacementRéussi">Effacement du fichier de sauvegarde réussi.</string>
    <string name="afficherContenu">Afficher le contenu du fichier de sauvegarde</string>
    <string name="fichierVide">Le fichier est actuellement vide.</string>

    <string name="choixÉquipe">Choix de l\'équipe</string>
    <string name="menuÉquipe">Menu de l\'équipe</string>
    <string name="matchActuel">Match actuel</string>

    <string name="changerAnglais">Switch to English</string>
</resources>
