<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/LLA1"
    tools:context="dicj.info.simulationhockey.choixEquipe">

    <Button
        android:id="@+id/buttonA1"
        android:enabled="false"
        android:text="@string/buttonA1"
        style="@style/buttonA1"
        android:onClick="boutonActivite1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:id="@+id/TVChoixEquipe"
        android:text="@string/TVChoixEquipe"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayoutA1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TLA1">

    <TableRow
        android:id="@+id/team0"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/ducks" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:background="@drawable/ducks"/>
    </TableRow>

    <TableRow
        android:id="@+id/team1"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/coyotes" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/coyotes" />
    </TableRow>

    <TableRow
        android:id="@+id/team2"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/bruins" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/bruins"/>
</TableRow>

    <TableRow
        android:id="@+id/team3"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/sabres" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/sabres"/>
</TableRow>

    <TableRow
        android:id="@+id/team4"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/flames" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/flames"/>
</TableRow>

    <TableRow
        android:id="@+id/team5"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/hurricanes" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/hurricanes"/>
</TableRow>

    <TableRow
        android:id="@+id/team6"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/blackhawks" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/blackhawks"/>
   </TableRow>

    <TableRow
        android:id="@+id/team7"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/avalanche" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/avalanche"/>
</TableRow>

        <TableRow
            android:id="@+id/team8"
            style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/blue_jackets" />
            <ImageView
                style="@style/IVchoixEquipe"
                android:src="@drawable/blue_jackets"/>
</TableRow>

        <TableRow
            android:id="@+id/team9"
            style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/stars" />
            <ImageView
                style="@style/IVchoixEquipe"
                android:src="@drawable/stars"/>
</TableRow>

    <TableRow
        android:id="@+id/team10"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/red_wings" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/red_wings"/>
</TableRow>

    <TableRow
        android:id="@+id/team11"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/oilers" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/oilers"/>
</TableRow>

    <TableRow
        android:id="@+id/team12"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/panthers" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/panthers"/>
</TableRow>

    <TableRow
        android:id="@+id/team13"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/kings" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/kings"/>
</TableRow>

    <TableRow
        android:id="@+id/team14"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/wild" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/wild"/>
</TableRow>

    <TableRow
        android:id="@+id/team15"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/canadiens" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/canadiens"/>
</TableRow>

    <TableRow
        android:id="@+id/team16"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/predators" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/predators"/>
</TableRow>

    <TableRow
        android:id="@+id/team17"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/devils" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/devils"/>
</TableRow>

    <TableRow
        android:id="@+id/team18"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/islanders" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/islanders"/>
</TableRow>

    <TableRow
        android:id="@+id/team19"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/rangers" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/rangers"/>
</TableRow>

    <TableRow
        android:id="@+id/team20"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/senators" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/senators"/>
</TableRow>

    <TableRow
        android:id="@+id/team21"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/flyers" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/flyers"/>
</TableRow>

    <TableRow
        android:id="@+id/team22"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/penguins" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/penguins"/>
</TableRow>

    <TableRow
        android:id="@+id/team23"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/sharks" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/sharks"/>
</TableRow>

    <TableRow
        android:id="@+id/team24"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/blues" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/blues"/>
</TableRow>

    <TableRow
        android:id="@+id/team25"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/lightning" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/lightning"/>
</TableRow>

    <TableRow
        android:id="@+id/team26"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/maple_leafs" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/maple_leafs"/>
</TableRow>

    <TableRow
        android:id="@+id/team27"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/canucks" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/canucks"/>
</TableRow>

    <TableRow
        android:id="@+id/team28"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/capitals" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/capitals"/>
</TableRow>

    <TableRow
        android:id="@+id/team29"
        style="@style/LLchoixEquipe">
    <TextView
        style="@style/teamNames"
        android:text="@string/jets" />
        <ImageView
            style="@style/IVchoixEquipe"
            android:src="@drawable/jets"/>
        </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>

